more qm lecture 5

--- a/QM/lecture5.tex
+++ b/QM/lecture5.tex
@@ -66,3 +66,5 @@ Note: once we know $\hat{O} \ket{j} = \ket{j'}$ for basis vectors we automatical
 Examples of linear operators:
 \begin{itemize}
 \item Identity operator: $\hat{I}$ defined by $\hat{I} \ket{v} = \ket{v}$ and $\bra{v} \hat{I} = \bra{v}$ $\forall v$. In n dimensional Hilbert space, this can be represented by the n by n identity matrix.
+\item Rotation operator in $\mathbb{R}^3$. For example $\hat{R}$ is a rotation around $\hat{z}$ axis by 90 degrees. We see that $\hat{R} \ket{1} = \ket{2}$, $\hat{R} \ket{2} = - \ket{1}$ and $\hat{R} \ket{3} = \ket{3}$. From these we can derive that $\hat{R}$ is $$\hat{R} = \begin{pmatrix} 0 & -1 & 0 \\ 1 & 0 & 0 \\ 0 & 0 & 1 \end{pmatrix}$$
+\end{itemize}
