--- a/Electromagnetism/lecture6.tex
+++ b/Electromagnetism/lecture6.tex
@@ -33,4 +33,4 @@ $\vec{E} = \vec{E}_0$ gives field lines which are straight in the direction of $
 
 \subsection{Dipoles}
 
-saw in previous example that far away, $\phi \approx \frac{q}{r}$ $\implies$ $\vec{E} \approx \frac{q}{r^2}\vec{e}_r$. What happens if the total charge vanishes? The simplest example of this is a dipole. Consider a 
+saw in previous example that far away, $\phi \approx \frac{q}{r}$ $\implies$ $\vec{E} \approx \frac{q}{r^2}\vec{e}_r$. What happens if the total charge vanishes? The simplest example of this is a dipole.
