--- a/Statistical Mechanics/stat-mech.tex
+++ b/Statistical Mechanics/stat-mech.tex
@@ -13,9 +13,11 @@
 \usepackage{wrapfig}
 \usepackage{url}
 \usepackage{biblatex}
+\usepackage{braket}
 \renewcommand{\leq}{\leqslant}
 \renewcommand{\geq}{\geqslant}
 \newcommand{\pd}[2]{\dfrac{\partial #1}{\partial #2}}
+\newcommand{\od}[2]{\dfrac{d #1}{d #2}}
 
 \title{Statistical Mechanics}
 
