--- a/Dynamical Systems/lecture5.tex
+++ b/Dynamical Systems/lecture5.tex
@@ -6,7 +6,7 @@ Lecture 5
 
 Now we can proove the Existance and Uniqueness Theorem. (That is: there exists a unique solution $\dot{x} = F(x)$ with initial condition $x(0) = x_0$ for $t \in [-a, a]$ for some $a > 0$ if $F$ is $C_1$)
 
-\begin{proof}
+%\begin{proof}
 
 Assumptions:
 \begin{enumerate}
