--- a/Differential Geometry/Diff-geo.tex
+++ b/Differential Geometry/Diff-geo.tex
@@ -16,6 +16,8 @@
 \usepackage{epstopdf}
 \renewcommand{\leq}{\leqslant}
 \renewcommand{\geq}{\geqslant}
+\newcommand{\pd}[2]{\dfrac{\partial #1}{\partial #2}}
+\newcommand{\od}[2]{\dfrac{d #1}{d #2}}
 
 %\newtheorem
 
