--- a/Dynamical Systems/Dynamical.tex
+++ b/Dynamical Systems/Dynamical.tex
@@ -17,6 +17,8 @@
 \usepackage{mathtools}
 \renewcommand{\leq}{\leqslant}
 \renewcommand{\geq}{\geqslant}
+\newcommand{\pd}[2]{\dfrac{\partial #1}{\partial #2}}
+\newcommand{\od}[2]{\dfrac{d #1}{d #2}}
 
 \title{Dynamical Systems}
 
@@ -33,5 +35,8 @@
 \input{lecture3.tex}
 \input{lecture4.tex}
 \input{lecture5.tex}
+\input{lecture6.tex}
+\input{lecture7.tex}
+\input{lecture8.tex}
 
 \end{document}
