fix dynamical lecture

--- a/Dynamical Systems/lecture8.tex
+++ b/Dynamical Systems/lecture8.tex
@@ -25,7 +25,7 @@ $\dot{x} = e^{x+y} - y$ and $\dot{y} = -x + xy$. This has a fixed point when $e^
 
 Fixed point at $\begin{pmatrix} x_0 \\ y_0 \end{pmatrix}$. Put $\begin{pmatrix} x \\ y \end{pmatrix} = \begin{pmatrix} x_0 \\ y_0 \end{pmatrix} + \begin{pmatrix} \epsilon_1 \\ \epsilon_2 \end{pmatrix} = \begin{pmatrix} -1 \\ 1 \end{pmatrix} + \begin{pmatrix} \epsilon_1 \\ \epsilon_2 \end{pmatrix}$
 
-Now $$\begin{pmatrix} \dot{x} \\ \dot{y} \end{pmatrix} = \begin{pmatrix} \dot{\epsilon}_1 \\ \dot{\epsilon}_2 \end{pmatrix} = \begin{pmatrix} e^{x+y} - y \\ -x + xy \begin{pmatrix} = \begin{pmatrix} e^{(-1 + \epsilon_1) + (1+\epsilon_2)} -1 - \epsilon_2 \\ - (-1 + \epsilon_1) + (-1 +\epsilon_1)(1+\epsilon_2) \end{pmatrix}$$
+Now $$\begin{pmatrix} \dot{x} \\ \dot{y} \end{pmatrix} = \begin{pmatrix} \dot{\epsilon}_1 \\ \dot{\epsilon}_2 \end{pmatrix} = \begin{pmatrix} e^{x+y} - y \\ -x + xy \end{pmatrix} = \begin{pmatrix} e^{(-1 + \epsilon_1) + (1+\epsilon_2)} -1 - \epsilon_2 \\ - (-1 + \epsilon_1) + (-1 +\epsilon_1)(1+\epsilon_2) \end{pmatrix}$$
 
 Now taylor expand to see that: $$\begin{pmatrix} \dot{x} \\ \dot{y} \end{pmatrix} = \begin{pmatrix} \epsilon_1 \\ - \epsilon_2 \end{pmatrix} + O(\epsilon^2)$$
 
